added auth in user

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-db_link=mongodb+srv://mahalwarudayan_db_user:<*****>@cluster0.dk9ilim.mongodb.net/course-selling-app;
+db_link=mongodb+srv://mahalwarudayan_db_user:12345@cluster0.dk9ilim.mongodb.net/course-selling-app;
